kubernetes/main/apps/downloads/bazarr/app/networkpolicy.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: bazarr
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: bazarr

  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: radarr
        - matchLabels:
            app.kubernetes.io/name: sonarr
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
    - toFQDNs:
        - matchName: github.com                # Subcleaner repo clone
        - matchName: api.github.com            # update check
        - matchName: raw.githubusercontent.com # announcements
        # subtitle providers
        - matchName: opensubtitles.com
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
